# DrugGEN

./: config.json  loss.py  main.py  new_dataloader.py  no_target_training.py  pyproject.toml  real_main.py  test_druggen.py  trainer.py  training_data.py  utils.py
druggen/: __init__.py  baseconfigs.py  basedatasets.py  basemodels.py  basetrainers.py  config.py  layers.py  loss.py  models.py  new_dataloader.py  trainer.py  utils.py
druggen/models/: notarget.py
